# Deep-Neural-Networks-PWR

./: .gitignore  Copy of lab01.ipynb  Copy of lab02.ipynb  docker-compose.yml  pyproject.toml
lab3/: lab3.ipynb
lab5/: lab5.ipynb
lab6/: lab6.ipynb
lab7/: lab7 copy.ipynb  lab7.ipynb
lab8/: lab8 copy.ipynb  lab8.ipynb
mlflow_data/: mlflow.db
