[project]
name = "listy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
