[project]
name = "listy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=1.24,<2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch==2.0.1+cu118",
    "torch-tb-profiler>=0.4.3",
    "torchaudio==2.0.2+cu118",
    "torchvision==0.15.2+cu118",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
